--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
         <div class="container">
             <div class="top_info">
-                <h1>Rock Paper Scissors</h1>
-                <p>You <span id="score_a"></span></p>
+                <h1>Rock Paper Scissor</h1>
+                <p>Me <span id="score_a"></span></p>
                 <p>Computer <span id="score_b"></span></p>
                 
                 <button onclick="newGame()">New Game</button>
